hard-gists/015e2ce27cecdea63564/run.log
=== Docker Run Log for 015e2ce27cecdea63564 ===
Started at: Mi 29. Okt 11:19:50 CET 2025

[2025-10-29 11:19:50] START: Running container for 015e2ce27cecdea63564
[2025-10-29 11:19:51] SUCCESS: Container 58174066f17d9207021f19b593a9acee38cf0c9c6461cf5553610dc88404ee39 started for 015e2ce27cecdea63564
=== Container logs for 015e2ce27cecdea63564 ===
  File "/snippet.py", line 52
    print doc
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 015e2ce27cecdea63564 ===
[2025-10-29 11:19:53] INFO: Container 58174066f17d9207021f19b593a9acee38cf0c9c6461cf5553610dc88404ee39 has stopped
